# numbat-tasks

./: .dockerignore  .gitignore  404.html  LICENSE  README.md  base.env  docker-compose-example.yml  docker-compose.yml  index.html  sitemap.xml
.github/workflows/: api-django-unit-tests.yml  api-python-linting.yml  build-and-release.yml  bump-version.yml  create-release.yml  frontend-typescript-linting.yml  python-linting.yml
api/: .flake8  README.md  manage.py  pyproject.toml
api/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  test_accounts.py  urls.py  views.py
api/accounts/migrations/: 0001_postgres_extensions.py  0002_initial.py
api/numbat_notes_api/: asgi.py  settings.py  urls.py  wsgi.py
api/numbat_tasks_api/: __init__.py  asgi.py  schema.py  serializers.py  settings.py  test_utils.py  urls.py  views.py  wsgi.py
api/tasks/: admin.py  models.py  permissions.py  serializers.py  test_tasks.py  urls.py  utils.py  views.py
api/tasks/migrations/: 0001_initial.py  0002_rename_active_list_archived.py  0003_invert_archived.py  0004_alter_list_archived.py  0005_list_sort_order.py  0006_alter_task_created_alter_task_text_and_more.py  0007_list_manual_order.py  0008_alter_list_manual_order.py  0009_alter_list_owner_alter_task_list.py  0010_list_pinned_alter_list_created.py  0011_subtask.py
docker/api/: api.dockerfile  development.dockerfile  entry.sh
docker/caddy/: Caddyfile
docker/docs/: docs.dockerfile  entry.sh
docker/example/: Caddyfile  build.sh  docker-compose.yml  settings.env
docker/frontend/: development.dockerfile  entry.sh  frontend.dockerfile
docs/: mkdocs.yml  pyproject.toml
docs/docs/: CNAME  environment_variables.md  getting_started.md  index.md  initial_setup.md  useful_urls.md  user_management.md
environment_variables/: index.html
frontend/: .eslintrc.cjs  .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  auth.ts  index.css  main.tsx  router.tsx
frontend/src/api/: config.ts  fetch.ts  getLists.ts  lists.ts  tasks.ts  token.ts  user.ts
frontend/src/components/: AccountMenu.tsx  AddEditList.tsx  AddEditTask.tsx  BottomAppBar.tsx  LinkifyText.tsx  ListActionsMenu.tsx  ListSettingsDialog.tsx  NavDraw.tsx  ResetExistingTasks.tsx  SearchListResult.tsx  SearchListsButton.tsx  SortOrderMenu.tsx  SortableList.tsx  SortableTaskList.tsx  Task.tsx  TaskListButton.tsx
frontend/src/components/form/: FormCheckBox.tsx  FormCheckbox.tsx  FormTextField.tsx  FormToggleButton.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/HomePage/: HomePage.tsx
frontend/src/pages/Settings/: Settings.tsx
frontend/src/pages/SignIn/: SignIn.tsx
frontend/src/pages/SignUp/: SignUp.tsx
frontend/src/providers/: AuthenticationProvider.tsx  ListsProvider.tsx
frontend/src/theme/: theme.tsx
getting_started/: index.html
search/: search_index.json
useful_urls/: index.html
user_management/: index.html
utils/: README.md  bump_version.py  pyproject.toml  test_calculate_version.py
