[project]
name = "numbat-tasks-api"
version = "0.1.0"
description = "Backend API for Numbat Tasks"
author = "Michael Van Delft <michael@xo.tc>"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular-sidecar>=2024.12.1",
    "psycopg-binary>=3.2.3",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "pytest-django>=4.9.0",
    "ruff>=0.8.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "numbat_tasks_api.settings"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-bandit
    "S",
    # isort
    "I",
    # pep8-naming
    "N"
]
# Ignore line lenght as that is handled else where.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore "No assertions" rule in tests.
"test*.py" = ["S101", "S311"]
